--- a/manifest.json
+++ b/manifest.json
@@ -2,28 +2,29 @@
     "theme_color": "#f69435",
     "background_color": "#f69435",
     "display": "standalone",
-    "scope": "/",
+    "orientation": "portrait",
     "start_url": "/index.html",
     "name": "pingpong",
     "short_name": "pp",
+    "description": "golden app",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "./icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "./icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/icon-384x384.png",
+            "src": "./icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "./icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
