--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#f69435",
     "display": "standalone",
     "orientation": "portrait",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "name": "pingpong",
     "short_name": "pp",
     "description": "golden app",
